# pandasai2_ollama

./: README.md  pandasai2_ollama.py  pyproject.toml
cache/: cache_db_0.9.db
