[project]
name = "content"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["langchain>=0.3.16", "langchain-community>=0.3.16", "ollama>=0.4.7", "langchain-ollama>=0.2.2", "pandas>=2.2.3", "pandasai>=2.0.24", "ipykernel>=6.29.5"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
